[package]
name = "template"
version = "0.1.0"
edition = "2024"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "A template for Rust projects"
homepage = "https://github.com/etosi/rust-template"
repository = "https://github.com/etosi/rust-template"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
